# rusty-rss

./: .gitignore  Cargo.toml  README.md  gate1-memory-candidates.csv  install.sh  rules.toml
.serena/: project.yml
crates/rusty-rss-core/: Cargo.toml
crates/rusty-rss-core/src/: capture.rs  config.rs  db.rs  enrich.rs  fetch.rs  lib.rs  llm.rs  models.rs  parse.rs  rules.rs  sort.rs  sync.rs  tag.rs  test_support.rs
crates/rusty-rss-core/src/capture/: fetch.rs  options.rs  orchestrator.rs  security.rs  test_support.rs
crates/rusty-rss-core/src/db/: captures.rs  enrichment.rs  export.rs  migrations.rs  posts.rs  schema.rs  search.rs  tags.rs  test_support.rs
crates/rusty-rss-core/src/llm/: prompt.rs
crates/rusty-rss-core/src/llm/testdata/: enrichment_messages_normal.json  enrichment_messages_oversized.json
crates/rusty-rss-core/src/rules/: compile.rs  parse.rs  test_support.rs  types.rs
crates/rusty-rss-core/src/tag/: run.rs  score.rs  test_support.rs  types.rs
crates/rusty-rss-mcp/: Cargo.toml
crates/rusty-rss-mcp/src/: config.rs  lib.rs  main.rs  server.rs
crates/rusty-rss-mcp/tests/: server.rs
docs/: export-record-v1.sample.json  export-schema-v1.md  index.md
docs/agents/: tool-manifest.v1.json  usage.md
docs/explanation/: architecture.md  dependency-maintenance.md  enrichment-and-triage.md  error-handling.md  fts-multi-source.md
docs/how-to/: capture-outbound-pages.md  enrich-and-triage.md  export-agent-records.md  search-and-query.md  sync-saved-posts.md  tag-posts.md  use-mcp-server.md
docs/prd/: rule-engine.md
docs/reference/: cli.md  database.md  export-schema-v1.md
docs/superpowers/plans/: 2026-06-27-install-script.md
docs/superpowers/specs/: 2026-06-27-enrichment-fts-design.md  2026-06-27-install-script-design.md
docs/tutorials/: getting-started.md
skills/rusty-rss-agent/: SKILL.md
src/: cli.rs  config.rs  db.rs  fetch.rs  main.rs  models.rs  parse.rs  sync.rs
src/cli/: enrich.rs  export.rs  fts.rs  read.rs  sync.rs  tag.rs  test_support.rs  triage.rs
test-fixtures/: atom-feed.xml
tests/: cli_smoke.rs
