[package]
name = "rusty-rss"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace]
members = [".", "crates/rusty-rss-core", "crates/rusty-rss-mcp"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
rusty-rss-core = { path = "crates/rusty-rss-core" }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
