[package]
name = "rusty-rss-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2"
html2md = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.27"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
url = "2"
